refactor(core): replace list access and null check
Updated HolidayMapper to use getFirst() method instead of index access for locality. Used Objects.isNull() for null checks in HolidayService.